# roboarm

./: CMakeLists.txt  README.md  package.xml
config/: roboarm_controllers.yaml
launch/: roboarm.launch  roboarm_control.launch
roboarm_moveit_configuration/: .setup_assistant  CMakeLists.txt  package.xml
roboarm_moveit_configuration/config/: controller.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  roboarm.srdf
roboarm_moveit_configuration/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  roboarm_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/: goto_pose_server.py  pose_request_client.py  roboarm_control.py
srv/: PoseRequest.srv
urdf/: roboarm.urdf.xacro
world/: pick_and_place.world
